core.scss: - bugfix: .lzy-reveal-controller -> width of label, so it doesn't wrap

--- a/css/scss/_lizzy_core.scss
+++ b/css/scss/_lizzy_core.scss
@@ -920,8 +920,8 @@ body {
 		content: '–';
     }
     .lzy-reveal-controller label {
-        width: calc(100% - 2em - 4px);
-		padding-left: 0.4em;
+        width: calc(100% - 2em - 6px);
+		margin-left: -0.1em;
 		cursor: pointer;
     }
 }
